--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,14 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "0.4.9"
-gpio-cdev = "0.2.0"
-structopt = "0.2.10"
-stderrlog = "0.4.1"
+chrono = "0.4.*"
+dns-lookup = "1.0.*"
+gpio-cdev = "0.2.*"
+structopt = "0.2.*"
+stderrlog = "0.4.*"
 log = "0.4"
-fastping-rs = "0.1.5"
+ping = "0.2.*"
+# fastping-rs = "0.1.5"
 
 [profile.release]
 opt-level = 3
